# Crew-ai_final_project

./: README.md  product_recommendation.md
product_comparison_bot/: pyproject.toml
product_comparison_bot/src/product_comparison_bot/config/: agents.yaml  tasks.yaml
src/product_comparison_bot/: crew.py  main.py
