[project]
name = "product_comparison_bot"
version = "0.1.0"
description = "product_comparison_bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
product_comparison_bot = "product_comparison_bot.main:run"
run_crew = "product_comparison_bot.main:run"
train = "product_comparison_bot.main:train"
replay = "product_comparison_bot.main:replay"
test = "product_comparison_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
